fixes invalid image preview while cropping

--- a/app/assets/stylesheets/user_avatars.css.scss
+++ b/app/assets/stylesheets/user_avatars.css.scss
@@ -62,8 +62,8 @@ body#profiles {
         }
 
         div#user-avatar-thumb-preview {
-            width: 150px;
-            height: 150px;
+            width: 100px;
+            height: 100px;
             margin-right: 25px;
 
             float: right;
